<resources>
    <string name="login">Sign In</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="your_full_name">What is your\nfull name?</string>
    <string name="choose_display_name">Choose a display name for your friends to recognize you easily.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="label_continue">Continue</string>
    <string name="your_mobile_number">What is your\nmobile number?</string>
    <string name="otp_message">We will send a One-Time-Password (OTP) to your mobile phone number.</string>
    <string name="phone_number">Phone Number</string>
    <string name="no_network_message">No network connection</string>
    <string name="authentication_process">Authentication\nProcess</string>
    <string name="enter_otp_message">Please enter the code we sent via SMS to</string>
    <string name="resend_otp_message">Don’t have a code yet? Can’t find one?</string>
    <string name="resend_email">Resend Email</string>
    <string name="profile">Profile</string>
    <string name="user_setting">User Settings</string>
    <string name="status">Status</string>
    <string name="email">Email</string>
    <string name="user_name">Username</string>
    <string name="view_contacts">View Contacts</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="chatq_setting">ChatQ Settings</string>
    <string name="privacy_security">Privacy &amp; Security</string>
    <string name="privacy">Privacy</string>
    <string name="notification_sound">Notifications &amp; Sound</string>
    <string name="language">Language</string>
    <string name="report_problem">Report a Problem</string>
    <string name="what_can_we_improve">What Can We Improve?</string>
    <string name="log_out">Log Out</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="all_permission_avatar">Need to grant permission to upload</string>
    <string name="app_info">App Info</string>
    <string name="ok">OK</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="enter_status_message">Enter\nStatus message</string>
    <string name="enter_a_status_message">Enter a status message</string>
    <string name="share_your_mood">Share your current mood with your friends.</string>
    <string name="save">Save</string>
    <string name="set_username">Set username</string>
    <string name="username_message">You can choose a username on ChatQ to allow people to find you by this username and contact you without knowing your phone number.</string>
    <string name="empty_inbox_message">Your friends using ChatQ will appear here.</string>
    <string name="chats">Chats</string>
    <string name="chat_hint">Aa</string>
    <string name="chat_member">%1$s member</string>
    <string name="chat_members">%1$s members</string>
    <string name="chat_member_0">0 member</string>
    <string name="reply">Reply</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="hours_ago">%1$d hrs ago</string>
    <string name="min_ago">%1$d min ago</string>
    <string name="sec_ago">%1$d sec ago</string>
    <string name="just_now">Just now</string>
    <string name="ls_days_ago">Last seen %1$d days ago</string>
    <string name="ls_hours_ago">Last seen %1$d hours ago</string>
    <string name="ls_an_hour_ago">Last seen an hour ago</string>
    <string name="ls_min_ago">Last seen %1$d mins ago</string>
    <string name="ls_sec_ago">Last seen %1$d sec ago</string>
    <string name="ls_just_now">Last seen just now</string>
    <string name="a_min_ago">A minute ago</string>
    <string name="an_hour_ago">An hour ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="ls_yesterday">Last seen yesterday</string>
    <string name="invalid_otp">Invalid OTP Entered</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="view_profile">View Profile</string>
    <string name="edit_group">Edit Group</string>
    <string name="search_messages">Search Messages</string>
    <string name="show_background">Show Background</string>
    <string name="hide_background">Hide Background</string>
    <string name="mute_notification">Mute Notification</string>
    <string name="unmute_notification">Unmute Notification</string>
    <string name="shared_media">Shared Media</string>
    <string name="view_all">View All</string>
    <string name="participants_title">Participants (%1$s)</string>
    <string name="options">Options</string>
    <string name="leave_chat">Leave Chat</string>
    <string name="clear_chat_history">Clear Chat History</string>
    <string name="new_group_with">New group with</string>
    <string name="are_you_sure_want_to_leave_this_chat">Are you sure want to leave this chat?</string>
    <string name="are_you_sure_want_to_clear_this_chat_history">Are you sure want to clear this chat?</string>
    <string name="leaved_successfully">Leaved successfully.</string>
    <string name="chat_history_clear_successfully">Chat history clear successfully.</string>
    <string name="add_friends_to_group">Add friends to group</string>
    <string name="no_sent_photo_in_this_conversation_yet">No sent photo in this conversation yet</string>
    <string name="invite_friends_to_group">Invite friends to group</string>
    <string name="camera">Camera</string>
    <string name="open_profile">Open Profile</string>
    <string name="send_private_message">Send Private Message</string>
    <string name="make_group_admin">Make Group Admin</string>
    <string name="remove_admin">Remove Admin</string>
    <string name="remove_from_group">Remove From Group</string>
    <string name="admin">Admin</string>
    <string name="send_messages">Send Messages</string>
    <string name="call_now">Call Now</string>
    <string name="contact_details">Contact Details</string>
    <string name="block_users">Block Users</string>
    <string name="report_user">Report User</string>
    <string name="add_to_contact">Add To Contact</string>
    <string name="spam_advertising">Spam/Advertising</string>
    <string name="sexual_harassment">Sexual harassment</string>
    <string name="other_harassment">Other harassment</string>
    <string name="other">Other</string>
    <string name="tell_us_why_you_are_sending_us_this_report">Tell us why you are sending us this report</string>
    <string name="let_us_know_what_s_going_on">Let us know\nwhat’s going on</string>
    <string name="we_use_your_report_to_help_us_learn_when_something_s_not_right">We use your report to help us learn when something’s not right.</string>
    <string name="your_report">Your report</string>
    <string name="send">Send</string>
    <string name="sent">Sent</string>
    <string name="thank_you_for_reporting">Thank you for reporting!</string>
    <string name="report_success_message">Our support team will investigate the situation and apply proper measures if deemed necessary.</string>
    <string name="blocked_successfully">Blocked successfully</string>
    <string name="are_you_sure_want_to_block">Are you sure want to block %1$s?</string>
    <string name="sure_to_logout">Are you sure you want to logout from ChatQ?</string>
    <string name="logout_message">Logging out from the ChatQ app might cause losing ability to get notified, stay up to date with your chats.</string>
    <string name="new_chat">New Chat</string>
    <string name="group_chat">Create Group Chat</string>
    <string name="create_self_chat">Create a Self Chat</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="friends_on_chatq_title">Friends on ChatQ (%1$s)</string>
    <string name="friends_using_chatq">Friends using ChatQ</string>
    <string name="na">NA</string>
    <string name="image">Image</string>
    <string name="unpin">Unpin</string>
    <string name="pin">pin</string>
    <string name="mute">mute</string>
    <string name="unmute">unmute</string>
    <string name="leave">Leave</string>
    <string name="you">You</string>
    <string name="me">Me</string>
    <string name="invite_friend_msg">Join me on ChatQ, the all-in-one app to talk about finance. Download it here! https://rebrand.ly/zi965h</string>
    <string name="photos">Photos</string>
    <string name="links">Links</string>
    <string name="charts">Charts</string>
    <string name="add_friends">Add Friends</string>
    <string name="add_participants">Add Participants</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="last_seen_a_long_time_ago">Last seen a long time ago</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="group_name_max_length">%1$s/%2$s</string>
    <string name="create_group">Create Group</string>
    <string name="edit_group_name">Edit Group Name</string>
    <string name="change_group_avatar">Change Group Avatar</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="blocked_sub_heading">Blocked users will no longer be able to send messages or call you.</string>
    <string name="add_new">Add New</string>
    <string name="removed_from_chat">%1$s removed %2$s from chat</string>
    <string name="changed_group_name">%1$s changed the group name from %2$s to %3$s</string>
    <string name="demoted_to_member">%1$s demoted %2$s to member</string>
    <string name="promoted_to_admin">%1$s promoted %2$s to admin</string>
    <string name="created_group">%1$s created group %2$s</string>
    <string name="changed_group_image">%1$s changed group image</string>
    <string name="left_the_room">%1$s left the room</string>
    <string name="joined_the_room">%1$s joined the room</string>
    <string name="report">Report</string>
    <string name="start_your_first_chat">Start your first Chat</string>
    <string name="compose">Compose</string>
    <string name="number_members">%1$d members</string>
    <string name="forwarded">Forwarded</string>
    <string name="cryptocurrencies">Cryptocurrencies</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="group">Group</string>
    <string name="members">Members</string>
    <string name="member">Member</string>
    <string name="no_results_found_for">No results found for</string>
    <string name="all">All</string>
    <string name="load_more">Load more</string>
    <string name="empty_msg_photo">Pictures shared with your friends will appear here.</string>
    <string name="empty_msg_link">Links shared with your friends will appear in this section.</string>
    <string name="empty_msg_user">Your friends using ChatQ will appear here.</string>
    <string name="empty_msg_group_chats">You don’t have any groups to choose.</string>
    <string name="empty_msg_private_chats">You don’t have any friends to choose.</string>
    <string name="participants">Participants</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto_default">Auto (Default)</string>
    <string name="txt_thai">日本語</string>
    <string name="txt_japanese">ภาษาไทย</string>
    <string name="txt_Vietnamese">Tiếng Việt</string>
    <string name="txt_english">English</string>
    <string name="friends">Friends</string>
    <string name="sending">Sending</string>
    <string name="search_by_name">Search by Name</string>
    <string name="uploading_failed">Image uploading failed</string>
    <string name="set_a_new_admin">Set a New Admin</string>
    <string name="search_hint">Search</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
</resources>