<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/screen_padding">

        <TextView
            android:id="@+id/textViewHeading"
            style="@style/TextViewHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blocked_users"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewSubTitle"
            style="@style/TextViewDialogMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/blocked_sub_heading"
            android:textColor="@color/black_sub_title"
            android:textSize="@dimen/text_size_l1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeading" />

        <TextView
            android:id="@+id/textViewAddNew"
            style="@style/TextViewDialogMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/add_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginBottom="@dimen/common_margin"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/textViewAddNew"
            tools:listitem="@layout/list_item_blocked_user" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>