<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:paddingBottom="@dimen/common_margin">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMenus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_padding"
        android:layout_marginEnd="@dimen/dialog_padding"
        android:layout_marginBottom="@dimen/common_margin"
        app:cardBackgroundColor="@color/txt_white"
        app:cardCornerRadius="@dimen/app_dialog_corner_radius"
        app:cardElevation="@dimen/zero_dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toTopOf="@id/cardCancelPicker">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvChooseAdminDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_16sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingBottom="@dimen/_16sdp"
                android:tag="0"
                android:text="@string/tell_us_why_you_are_sending_us_this_report"
                android:textSize="@dimen/_15ssp" />

            <View
                android:id="@+id/vSeparator1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/gray_divider" />

            <TextView
                android:id="@+id/tvReportOption1"
                style="@style/TextViewChatSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:padding="@dimen/common_margin"
                android:tag="1"
                android:text="@string/spam_advertising"
                android:textColor="@color/blue_link"
                android:textSize="@dimen/_20ssp" />

            <View
                android:id="@+id/vSeparator2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/gray_divider" />

            <TextView
                android:id="@+id/tvReportOption2"
                style="@style/TextViewChatSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:padding="@dimen/common_margin"
                android:tag="2"
                android:text="@string/sexual_harassment"
                android:textColor="@color/blue_link"
                android:textSize="@dimen/_20ssp" />

            <View
                android:id="@+id/vSeparator3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/gray_divider" />

            <TextView
                android:id="@+id/tvReportOption3"
                style="@style/TextViewChatSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:padding="@dimen/common_margin"
                android:tag="2"
                android:text="@string/other_harassment"
                android:textColor="@color/blue_link"
                android:textSize="@dimen/_20ssp" />

            <View
                android:id="@+id/vSeparator4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/gray_divider" />

            <TextView
                android:id="@+id/tvReportOption4"
                style="@style/TextViewChatSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:padding="@dimen/common_margin"
                android:tag="2"
                android:text="@string/other"
                android:textColor="@color/blue_link"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCancelPicker"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/txt_white"
        app:cardCornerRadius="@dimen/app_dialog_corner_radius"
        app:cardElevation="@dimen/zero_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cvMenus"
        app:layout_constraintStart_toStartOf="@id/cvMenus">

        <TextView
            android:id="@+id/tvCancel"
            style="@style/TextViewDialogMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:padding="@dimen/common_margin"
            android:tag="3"
            android:text="@string/cancel"
            android:textSize="@dimen/_20ssp" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>