<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding">

    <com.proto.type.base.ui.widget.ChatQToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        app:ctb_text_right="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHeading"
        style="@style/TextViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_33sdp"
        android:layout_marginTop="@dimen/common_margin"
        android:elevation="@dimen/zero_dp"
        app:layout_constraintTop_toBottomOf="@id/textViewHeading"
        app:tabBackground="@drawable/tab_bg_selector"
        app:tabGravity="fill"
        app:tabIndicator="@color/transparent"
        app:tabIndicatorHeight="@dimen/zero_dp"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        app:tabSelectedTextColor="@color/black_title"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:tabTextColor="@color/black_sub_title" />

    <EditText
        android:id="@+id/editTextSearch"
        style="@style/SearchEditText"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:background="@drawable/bg_search_edit_text"
        android:drawableStart="@drawable/ic_search_gray"
        android:drawablePadding="@dimen/common_margin"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraints"
        android:layout_marginTop="@dimen/common_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>